Fixed error with Header not showing up

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -25,7 +25,7 @@
   display: flex;
 }
 
-.side {
+.brochure {
   display: inline-block;
   width: 40%;
   b {
